--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,8 @@
 {
     "parser": "babel-eslint",
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "rules": {
+        "react/prop-types": 0,
+        "react/jsx-filename-extension": [0, { "extensions": [".js", ".jsx"] }]
+    }
 }
