--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "re-base": "^3.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-keydown": "^1.7.4",
     "react-onclickoutside": "^6.1.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
