--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dev-utils": "^3.0.2",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.9",
+    "react-inlinesvg": "^0.6.0",
     "react-keydown": "^1.7.4",
     "react-onclickoutside": "^6.1.1",
     "react-router": "^4.1.1",
